# facial-emotion-detector

./: README.md  backend.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
